--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,11 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jrm2k6/cloudder": "^0.7.0",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "maatwebsite/excel": "^~2.1.0",
+        "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^3.1"
     },
     "require-dev": {
